[gd_scene load_steps=21 format=3 uid="uid://uw6o6obk6cfx"]

[ext_resource type="Script" path="res://scenes/attorney_minigame/ace_attorney_minigame.gd" id="1_0gc1n"]
[ext_resource type="Texture2D" uid="uid://cwb6codkardqn" path="res://assets/Attorney_Minigame/images/courtroom_background.png" id="2_ttqgh"]
[ext_resource type="Texture2D" uid="uid://dgs0xhtuj1rc2" path="res://assets/Attorney_Minigame/images/phoenix_wright.png" id="3_rj2ee"]
[ext_resource type="Texture2D" uid="uid://bce4g5p42l3hi" path="res://assets/Attorney_Minigame/images/desk.png" id="4_1r0gb"]
[ext_resource type="Texture2D" uid="uid://bn2dkh68n88b4" path="res://assets/Attorney_Minigame/images/evidence_tab.png" id="5_vwinn"]
[ext_resource type="Texture2D" uid="uid://kee21e3tmhe" path="res://assets/Attorney_Minigame/images/evidence_hidden/0.png" id="6_3cvpa"]
[ext_resource type="Texture2D" uid="uid://bwy5bcdd7m0bi" path="res://assets/Attorney_Minigame/images/objection.png" id="6_irtvs"]
[ext_resource type="Texture2D" uid="uid://c4sxa5d2p8fsx" path="res://assets/Attorney_Minigame/images/evidence_shown/0.png" id="7_debcu"]
[ext_resource type="Texture2D" uid="uid://be0dftcxb88mf" path="res://assets/Attorney_Minigame/images/attorney_progress_bar_under.png" id="9_brt6i"]
[ext_resource type="Texture2D" uid="uid://d0xu15hqy01vr" path="res://assets/Attorney_Minigame/images/attorney_progress_bar_over.png" id="10_0wq5h"]

[sub_resource type="Animation" id="Animation_0sj2j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e5632"]
resource_name = "failure"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_fvach"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7kxmw"]
resource_name = "pointing"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ajxy2"]
resource_name = "thinking"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 8, 9]
}

[sub_resource type="Animation" id="Animation_a12xh"]
resource_name = "victory"
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ujmn0"]
_data = {
"RESET": SubResource("Animation_0sj2j"),
"failure": SubResource("Animation_e5632"),
"idle": SubResource("Animation_fvach"),
"pointing": SubResource("Animation_7kxmw"),
"thinking": SubResource("Animation_ajxy2"),
"victory": SubResource("Animation_a12xh")
}

[sub_resource type="Animation" id="Animation_xq85b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4r1ft"]
resource_name = "objection!"
length = 0.72
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rg4ch"]
_data = {
"RESET": SubResource("Animation_xq85b"),
"objection!": SubResource("Animation_4r1ft")
}

[node name="AceAttorneyMinigame" type="Node2D"]
script = ExtResource("1_0gc1n")

[node name="CourtroomBackground" type="TextureRect" parent="."]
offset_top = -336.0
offset_right = 256.0
offset_bottom = -144.0
scale = Vector2(1.75, 1.75)
texture = ExtResource("2_ttqgh")
stretch_mode = 4

[node name="PhoenixWright" type="Sprite2D" parent="."]
position = Vector2(217, -176)
scale = Vector2(1.75, 1.75)
texture = ExtResource("3_rj2ee")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="PhoenixWright"]
libraries = {
"": SubResource("AnimationLibrary_ujmn0")
}
autoplay = "idle"

[node name="Desk" type="Sprite2D" parent="."]
position = Vector2(180, -38)
scale = Vector2(1.75, 1.75)
texture = ExtResource("4_1r0gb")

[node name="EvidenceTab" type="Sprite2D" parent="."]
position = Vector2(489, -168)
scale = Vector2(1.75, 1.75)
texture = ExtResource("5_vwinn")

[node name="AttorneyMusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="AttorneySoundPlayer" type="AudioStreamPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.93, 1.93)
limit_left = 0
limit_bottom = 0

[node name="EvidenceSilhouette" type="TextureButton" parent="."]
offset_left = 273.0
offset_top = -311.0
offset_right = 343.0
offset_bottom = -241.0
disabled = true
texture_normal = ExtResource("6_3cvpa")

[node name="Evidence1" type="TextureButton" parent="."]
offset_left = 415.0
offset_top = -221.0
offset_right = 485.0
offset_bottom = -151.0
texture_normal = ExtResource("7_debcu")

[node name="Evidence2" type="TextureButton" parent="."]
offset_left = 499.0
offset_top = -220.0
offset_right = 569.0
offset_bottom = -150.0
texture_normal = ExtResource("7_debcu")

[node name="Evidence3" type="TextureButton" parent="."]
offset_left = 415.0
offset_top = -136.0
offset_right = 485.0
offset_bottom = -66.0
texture_normal = ExtResource("7_debcu")

[node name="Evidence4" type="TextureButton" parent="."]
offset_left = 499.0
offset_top = -136.0
offset_right = 569.0
offset_bottom = -66.0
texture_normal = ExtResource("7_debcu")

[node name="Objection" type="Sprite2D" parent="."]
position = Vector2(304.177, -168.5)
scale = Vector2(1.75521, 1.75521)
texture = ExtResource("6_irtvs")
hframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="Objection"]
libraries = {
"": SubResource("AnimationLibrary_rg4ch")
}

[node name="InitialWaitTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AfterObjectionTimer" type="Timer" parent="."]
one_shot = true

[node name="GameDurationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="EndingTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = 14.0
offset_top = -321.0
offset_right = 119.0
offset_bottom = -304.0
nine_patch_stretch = true
texture_under = ExtResource("9_brt6i")
texture_progress = ExtResource("10_0wq5h")

[connection signal="pressed" from="Evidence1" to="." method="_on_evidence_1_pressed"]
[connection signal="pressed" from="Evidence2" to="." method="_on_evidence_2_pressed"]
[connection signal="pressed" from="Evidence3" to="." method="_on_evidence_3_pressed"]
[connection signal="pressed" from="Evidence4" to="." method="_on_evidence_4_pressed"]
[connection signal="timeout" from="InitialWaitTimer" to="." method="_on_initial_wait_timer_timeout"]
[connection signal="timeout" from="AfterObjectionTimer" to="." method="_on_after_objection_timer_timeout"]
[connection signal="timeout" from="GameDurationTimer" to="." method="_on_game_duration_timer_timeout"]
[connection signal="timeout" from="EndingTimer" to="." method="_on_ending_timer_timeout"]
